# green_engine

./: CMakeLists.txt  README.md  build.bat  imgui.ini
assets/shaders/: fragment-blue.shader  fragment.shader  vertex.shader
src/: main.cpp
src/core/: error.cpp  error.h  input_state.cpp  input_state.h  services.cpp  services.h  state.h  window.cpp  window.h
src/renderer/: camera.cpp  camera.h  ibo.cpp  ibo.h  model.cpp  model.h  model_loader.cpp  model_loader.h  renderer.cpp  renderer.h  shader.cpp  shader.h  text.cpp  text.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h  vertex.h
src/scene/: engine.cpp  engine.h  scene.cpp  scene.h
